tests/scripts/errors/runtime/missing_property.cdo
VAR o = { name: "Alice" };
print(o.nonexistent.x);
